# trans_analysis

./: .coverage  .gitignore  README.md  pyproject.toml
data/: ds_operations.xlsx  test_operations.xlsx
src/: main.py  services.py  views.py
tests/: test_services.py  test_transactions.py  test_views.py
